<resources>
    <string name="app_name">YiShou</string>
    <string name="main_title_home">应用首页</string>
    <string name="main_title_account">个人中心</string>
    <string name="main_title_cart">发布商品</string>
    <string name="main_title_search">分类商品</string>

    <string name="title_login">登录</string>
    <string name="title_unlogin">未登录</string>
    <string name="title_register">注册</string>


    <!--登录-->
    <string name="user_login">请输入用户名</string>
    <string name="user_pwd">请输6到16位密码</string>
    <string name="rm_pwd">记住密码</string>
    <string name="auto_login">自动登陆</string>
    <string name="butt_login">登录</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="back">返回</string>
    <string name="new_user">新用户？点击注册</string>

    <!--注册-->
    <string name="register_phone">请输入手机号</string>
    <string name="register_msg">请输入短信验证码</string>
    <string name="register_msg_w">获取短信验证码</string>
    <string name="register_line">完善注册信息</string>
    <string name="register_okpwd">请确认密码</string>
    <string name="register_up">提交</string>

    <!--主页文字-->
    <string name="main_hotgoods">热门商品</string>
    <string name="main_goodslist">商品列表</string>
    <string name="main_moregoods">更多商品</string>


    <!--标题数组-->
    <string-array name="arr_title">
        <item>@string/main_title_home</item>
        <item>@string/main_title_account</item>
        <item>@string/main_title_cart</item>
        <item>@string/main_title_search</item>
    </string-array>

    <!--登录标题-->
    <string name="title_activity_login">登录界面</string>

    <!--商品展示列表-->
    <string name="goods_list_price">价格</string>
    <string name="goods_list_hot">人气</string>
    <string name="goods_list_new">最新</string>
    <string name="goods_list_sales">销量</string>
    <string name="nothing">未获取到数据</string>

    <!--用户信息界面-->
    <string name="info_user_name">用户姓名</string>
    <string name="info_user_location">用户地址</string>
    <string name="info_user_self">个性前面</string>
    <string name="info_fixinfo">编辑资料</string>
    <string name="info_exitlogin">退出登录</string>

    <!--上传界面-->
    <string name="up_photo">来个照片呗</string>

    <!--商品发布界面-->
    <string name="play_camera_up">拍照上传</string>
    <string name="play_photo_up">相册选取</string>
    <string name="cancel_up">取消上传</string>
    <string name="publishcart">确认上传</string>
    <string name="cancelcart">取消上传</string>
    <string name="enter">确定</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
