<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xf.yishou.activity.GoodsListActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_goods_list_back"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_weight="1"
            android:text="@string/main_goodslist"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        style="@style/style_liner_view_horizontal"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_price"
            style="@style/style_goods_list_ll">

            <TextView
                android:id="@+id/tv_sort_price"
                style="@style/style_goods_list_tv"
                android:text="@string/goods_list_price"/>

            <RadioGroup
                android:id="@+id/rg_price"
                style="@style/style_goods_list_rg">

                <RadioButton
                    android:id="@+id/rb_price_asc"
                    style="@style/style_goods_list_rb"
                    android:button="@drawable/selector_asc" />

                <RadioButton
                    android:id="@+id/rb_price_desc"
                    style="@style/style_goods_list_rb"
                    android:button="@drawable/selector_desc" />

            </RadioGroup>
        </LinearLayout>

        <View
            style="@style/style_liner_view_vertical"/>
        <LinearLayout
            android:id="@+id/ll_hot"
            style="@style/style_goods_list_ll">

            <TextView
                android:id="@+id/tv_sort_hot"
                style="@style/style_goods_list_tv"
                android:text="@string/goods_list_hot"/>

            <RadioGroup
                style="@style/style_goods_list_rg">

                <RadioButton
                    style="@style/style_goods_list_rb"
                    android:button="@drawable/selector_asc" />

                <RadioButton
                    style="@style/style_goods_list_rb"
                    android:button="@drawable/selector_desc" />

            </RadioGroup>
        </LinearLayout>

        <View
            style="@style/style_liner_view_vertical"/>
        <LinearLayout
            android:id="@+id/ll_new"
            style="@style/style_goods_list_ll">

            <TextView
                android:id="@+id/tv_sort_new"
                style="@style/style_goods_list_tv"
                android:text="@string/goods_list_new"/>

            <RadioGroup
                style="@style/style_goods_list_rg">

                <RadioButton
                    style="@style/style_goods_list_rb"
                    android:button="@drawable/selector_asc" />

                <RadioButton
                    style="@style/style_goods_list_rb"
                    android:button="@drawable/selector_desc" />

            </RadioGroup>
        </LinearLayout>

        <View
            style="@style/style_liner_view_vertical"/>
        <LinearLayout
            android:id="@+id/ll_collect"
            style="@style/style_goods_list_ll">

            <TextView
                android:id="@+id/tv_sort_collect"
                style="@style/style_goods_list_tv"
                android:text="@string/goods_list_sales"/>

            <RadioGroup
                style="@style/style_goods_list_rg">

                <RadioButton
                    style="@style/style_goods_list_rb"
                    android:button="@drawable/selector_asc" />

                <RadioButton
                    style="@style/style_goods_list_rb"
                    android:button="@drawable/selector_desc" />

            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
    <View
        style="@style/style_liner_view_horizontal"/>

    <RelativeLayout
        android:id="@+id/rl_goods"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/lv_goods_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/menu_text_gray"
            android:dividerHeight="0.3dp" >
        </ListView>

        <TextView
            android:id="@+id/tv_empty_goods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/nothing"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </RelativeLayout>


</LinearLayout>
