<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/white"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    tools:context="com.xf.yishou.activity.LoginActivity">

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_login_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left">
            <ImageView
                android:id="@+id/iv_login_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/icon_back"/>
            <TextView
                style="@style/style_login_title"
                android:gravity="center"
                android:paddingRight="38dp"
                android:text="@string/back"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_login_title"
            android:layout_weight="1"
            style="@style/style_login_title"
            android:text="@string/title_activity_login"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_register_butt"
            style="@style/style_login_title"
            android:layout_weight="1"
            android:text="@string/title_register"
            android:paddingLeft="30dp"
            android:gravity="center"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_bg"
        android:layout_marginTop="20dp"
        android:layout_below="@id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@mipmap/default_icon"/>

    <!--登录和注册的容器-->
    <FrameLayout
        android:layout_marginTop="20dp"
        android:id="@+id/fl_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/iv_bg">
    </FrameLayout>

</RelativeLayout>
