<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_hint_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="亲，您还没有登陆哦~~~"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_publi"
                android:layout_width="match_parent"
                android:layout_height="230dp">
                <ImageView
                    android:id="@+id/iv_cart_temp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/bg"/>
                <ImageView
                    android:id="@+id/iv_cart_camer"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/cameracannotbeused"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/up_photo"
                    android:layout_below="@id/iv_cart_camer"
                    android:layout_centerInParent="true"
                    android:textColor="@color/mycolor"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="9"
        android:gravity="center">
        <Button
            android:id="@+id/butt_cart_cancel"
            style="@style/style_butt_info"
            android:text="@string/cancelcart"/>
        <Button
            android:id="@+id/butt_cart_publish"
            style="@style/style_butt_info"
            android:text="@string/publishcart"/>
    </LinearLayout>
</LinearLayout>